--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,12 @@
       "type": "image/png",
       "sizes": "192x192"
     },
+    ,
+    {
+      "src": "icon.svg",
+      "type": "image/svg+xml",
+      "sizes": "any"
+    }
     {
       "src": "logo512.png",
       "type": "image/png",
