--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     },
     ,
     {
-      "src": "icon.svg",
+      "src": "logo.svg",
       "type": "image/svg+xml",
       "sizes": "any"
     }
