--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     ,
     {
       "src": "logo.svg",
-      "type": "image/svg+xml",
+      "type": "image/svg",
       "sizes": "any"
     }
     {
